Fix post - Exception - role